Fix header spacing

--- a/src/Components/Settings/Settings.css
+++ b/src/Components/Settings/Settings.css
@@ -1,4 +1,5 @@
 #settings {
     flex: 0 1 30px;
     padding-right: 50px;
+    min-width: 80px;
 }
